fixing button problem on mobile

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ input.invalid{
     border: 0;
     border-radius: 50%;
     width: 3.75rem;
-    aspect-ratio: 1 / 1;
+    height: 3.75rem;
     padding:0 1rem;
     overflow: hidden;
     cursor: pointer;
@@ -152,6 +152,7 @@ h1,h2{
     }
     #submit-btn{
         width: 4.5rem;
+        height: 4.5rem;
         transform: translate(0, 50%);
         left: auto;
         right: 0;
